name:              milagos
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Patrick Hurst
maintainer:        Patrick Hurst
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://milagos.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Model.Post
                     Model.PasswordAuth
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Admin
                     Handler.Renderers
                     Handler.Rss
                     Types


    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NamedFieldPuns

executable         milagos
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 0.10       && < 0.11
                 , yesod-core                    >= 0.10       && < 0.11
                 , yesod-auth                    >= 0.8        && < 0.9
                 , yesod-static                  >= 0.10       && < 0.11
                 , yesod-default                 >= 0.6        && < 0.7
                 , yesod-form                    >= 0.4        && < 0.5
                 , mime-mail                     >= 0.3.0.3    && < 0.5
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.8        && < 0.9
                 , persistent-sqlite     >= 0.8        && < 0.9
                 , template-haskell
                 , hamlet                        >= 0.10       && < 0.11
                 , shakespeare-css               >= 0.10       && < 0.12
                 , shakespeare-js                >= 0.11       && < 0.12
                 , shakespeare-text              >= 0.10       && < 0.12
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.0        && < 1.2
                 , yaml                          >= 0.5        && < 0.6
                 , http-conduit                  >= 1.2        && < 1.3
                 , bcrypt                        >= 0.0.3
                 , transformers
                 , blaze-html                    == 0.4.*
                 , xml-hamlet                    == 0.3.*
                 , xml-conduit                   == 0.5.*